--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -10,7 +10,7 @@ en:
     edit_profile: "Edit profile"
     email_password: "Email me my password"
     find: "Find %{thing}"
-    send_reminder: "Send reminder to shovel"
+    send_reminder: "Send reminder to clean up"
     sign_in: "Sign in"
     sign_out: "Sign out"
     sign_up: "Sign up"
@@ -22,24 +22,24 @@ en:
     required: "(required)"
   defaults:
     address: "address"
-    address_1: "1 City Hall Plaza"
-    address_2: "Suite 500"
-    city: "Boston"
-    city_state: "Boston, Massachusetts"
+    address_1: "123 Fake Street"
+    address_2: ""
+    city: "Bangor"
+    city_state: "Bangor, Maine"
     neighborhood: "Downtown"
     sms_number: "857-555-1212"
-    state: "MA"
-    thing: "hydrant"
+    state: "ME"
+    thing: "garden"
     this_thing: "This %{thing}"
-    tagline: "Claim responsibility for shoveling out a fire hydrant after it snows."
+    tagline: "Help clean up and maintain the parks of the Queen City."
     tos: "By signing up, you agree to the %{tos}."
     voice_number: "617-555-1212"
-    zip: "02201-2013"
+    zip: "04401"
   errors:
     password: "You need to sign in or sign up before continuing."
     not_found: "Could not find %{thing}."
   labels:
-    address: "Address, Neighborhood"
+    address: "Address"
     address_1: "Address Line 1"
     address_2: "Address Line 2"
     city: "City"
@@ -83,9 +83,9 @@ en:
     thank_you: "Thank you for adopting this %{thing}!"
     tos: "Terms of Service"
   sponsors:
-    built: "Built in Boston"
+    built: "Built in Bangor"
     cfa: "Code for America"
-    city: "City of Boston"
+    city: "City of Bangor"
     mayor:
-      name: "Thomas M. Menino"
-      title: "Mayor"
+      name: "Ben Sprague"
+      title: "Chairman"
